--- a/app/login/page.module.scss
+++ b/app/login/page.module.scss
@@ -3,6 +3,7 @@
 .page {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: $spacing-4;
